docs/7.58/md/abenhier_desc_agg_with_abexa.md
---
title: "Source Code"
description: |
  Public class definition CLASS cl_demo_hrrchy_desc_with DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. PRIVATE SECTION. METHODS fill_table. ENDCLASS.  Public class implementation CLASS cl_demo_hrrchy_desc_with IMPLEMENTATIO
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenhier_desc_agg_with_abexa.htm"
abapFile: "abenhier_desc_agg_with_abexa.htm"
keywords: ["select", "insert", "delete", "do", "if", "method", "class", "data", "abenhier", "desc", "agg", "with", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abendb_access.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql.htm) →  [ABAP SQL - Read Access](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_reading.htm) →  [SELECT, clauses](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_clauses.htm) →  [SELECT, FROM](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapfrom_clause.htm) →  [SELECT, FROM data\_source](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapselect_data_source.htm) →  [SELECT, FROM hierarchy\_data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_hierarchy_data.htm) →  [SELECT, FROM hierarchy\_navigator](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_hierarchy_navigators.htm) →  [SELECT, FROM hierarchy\_aggregate\_navigator](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_hierarchy_agg_navis.htm) →  [SELECT, FROM hierarchy\_descendants\_aggregate](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_hierarchy_desc_agg.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20SELECT%2C%20Hierarchy%20Navigator%20HIERARCHY_DESCENDANTS_AGGREGATE%20with%20WITH%2C%20ABENHIER_DESC_AGG_WITH_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion%20for%20improvement:)

SELECT, Hierarchy Navigator HIERARCHY\_DESCENDANTS\_AGGREGATE with WITH

This example demonstrates the hierarchy navigator HIERARCHY\_DESCENDANTS\_AGGREGATE with the addition JOIN and the addition WITH.

Source Code   

\* Public class definition
CLASS cl\_demo\_hrrchy\_desc\_with DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
  PRIVATE SECTION.
    METHODS fill\_table.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_hrrchy\_desc\_with IMPLEMENTATION.
  METHOD main.
    DATA(level) = 3.
    cl\_demo\_input=>new( )->request( CHANGING field = level ).
    fill\_table( ).
    SELECT FROM demo\_cds\_parent\_child( p\_id = 'A' ) AS h
                  RIGHT OUTER JOIN demo\_child\_num AS j
                    ON j~id = h~id
           FIELDS
              coalesce( CAST( h~id AS CHAR( 4 ) ),
                        'Null' ) AS id,
              coalesce( CAST( h~parent AS CHAR( 4 ) ),
                        'Null' ) AS parent,
              coalesce( CAST( hierarchy\_level AS CHAR( 20 ) ),
                        'Null' ) AS hierachy\_level,
              j~num AS num
           INTO TABLE @FINAL(joined\_hierarchy) ##no\_text.
    out->write( joined\_hierarchy ).
    SELECT FROM HIERARCHY\_DESCENDANTS\_AGGREGATE(
                  SOURCE HIERARCHY(
                           SOURCE demo\_cds\_parent\_child\_source
                           CHILD TO PARENT ASSOCIATION \_relat
                           START WHERE id = 'A'
                           SIBLINGS ORDER BY id ) AS h
                  JOIN demo\_child\_num AS j
                    ON j~id = h~id
                  MEASURES MIN( j~num ) AS min,
                           MAX( j~num ) AS max,
                           SUM( j~num ) AS sum,
                           COUNT( j~num ) AS cnt
                  WHERE hierarchy\_level >= @level
              WITH SUBTOTAL
              WITH BALANCE
              WITH NOT MATCHED
              WITH TOTAL ) AS agg
            FIELDS
              coalesce( CAST( id AS CHAR( 4 ) ),
                        'Null' ) AS id,
              coalesce( CAST( parent AS CHAR( 4 ) ),
                        'Null' ) AS parent,
              coalesce( CAST( hierarchy\_level AS CHAR( 20 ) ),
                        'Null' ) AS hierachy\_level,
              coalesce( CAST( hierarchy\_aggregate\_type AS CHAR( 4 ) ),
                        'Null' ) AS hierarchy\_aggregate\_type,
              min,
              max,
              sum,
              cnt
           INTO TABLE @FINAL(asql\_hierarchy\_desc\_aggregate) ##no\_text.
    SELECT FROM HIERARCHY\_DESCENDANTS\_AGGREGATE(
                  SOURCE demo\_cds\_parent\_child( p\_id = 'A' ) AS h
                  JOIN demo\_child\_num AS j
                    ON j~id = h~id
                  MEASURES MIN( j~num ) AS min,
                           MAX( j~num ) AS max,
                           SUM( j~num ) AS sum,
                           COUNT( j~num ) AS cnt
                  WHERE hierarchy\_level >= @level
              WITH SUBTOTAL
              WITH BALANCE
              WITH NOT MATCHED
              WITH TOTAL ) AS agg
            FIELDS
              coalesce( CAST( id AS CHAR( 4 ) ),
                        'Null' ) AS id,
              coalesce( CAST( parent AS CHAR( 4 ) ),
                        'Null' ) AS parent,
              coalesce( CAST( hierarchy\_level AS CHAR( 20 ) ),
                        'Null' ) AS hierachy\_level,
              coalesce( CAST( hierarchy\_aggregate\_type AS CHAR( 4 ) ),
                        'Null' ) AS hierarchy\_aggregate\_type,
              min,
              max,
              sum,
              cnt
           INTO TABLE @FINAL(cds\_hierarchy\_desc\_aggregate) ##no\_text.
    ASSERT
      cds\_hierarchy\_desc\_aggregate = asql\_hierarchy\_desc\_aggregate.
    DELETE FROM demo\_parent\_chld. "GTT!
    DELETE FROM demo\_child\_num.   "GTT!
    out->write( asql\_hierarchy\_desc\_aggregate ).
  ENDMETHOD.
  METHOD fill\_table.
    INSERT demo\_parent\_chld FROM TABLE @( VALUE #(
            ( cnt = 1 id = 'A'   parent\_id = ' '  )
            ( cnt = 2 id = 'AA'  parent\_id = 'A'  )
            ( cnt = 3 id = 'AB'  parent\_id = 'A'  )
            ( cnt = 4 id = 'AC'  parent\_id = 'A'  )
            ( cnt = 5 id = 'BA'  parent\_id = 'AB' )
            ( cnt = 6 id = 'BB'  parent\_id = 'AB' )
            ( cnt = 7 id = 'BC'  parent\_id = 'AB' )
            ( cnt = 8 id = 'BD'  parent\_id = 'AB' )
            ) ).
    INSERT demo\_child\_num FROM TABLE @( VALUE #(
            ( id = 'A'  num = 0   )
            ( id = 'AA' num = 10  )
            ( id = 'AB' num = 20  )
            ( id = 'AC' num = 30  )
            ( id = 'BA' num = 100 )
            ( id = 'BB' num = 200 )
            ( id = 'BC' num = 300 )
            ( id = 'BD' num = 400 )
            ( id = 'CA' num = 4000 )
            ( id = 'CB' num = 5000 )
            ) ).
  ENDMETHOD.
ENDCLASS.

Description   

This example demonstrates the way the different WITH additions work in the hierarchy navigator [HIERARCHY\_DESCENDANTS\_AGGREGATE](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_hierarchy_desc_agg.htm). The source is a hierarchy joined with another data source by the JOIN addition. Before the function is called, the result set of a join is produced containing all rows to which the WITH additions are applied. Depending on the value entered for the host variable level used in the WHERE condition, the additions WITH SUBTOTAL and WITH BALANCE return different results. The results of WITH NOT MATCHED and WITH TOTAL are independent of level.

The function [COALESCE](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abensql_coalesce.htm) is used here to highlight the null values in the output. If this function is not used, the null values are converted to type-dependent initial values and hence cannot be detected as null values.